# fed

./: .gitignore  Cargo.toml  Makefile  README.md  install.ps1
.github/workflows/: ci.yml
docs/man/: fed.1
docs/prompts/: PROMPT-01-Init.md  PROMPT-02–Options.md  PROMPT-03-Man-Pages.md  PROMPT-04-Help.md
src/: main.rs
